--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 astroid==2.4.2
+bcrypt==3.1.7
+cffi==1.14.0
 click==7.1.2
 dnspython==1.16.0
 email-validator==1.1.1
@@ -9,7 +11,10 @@ idna==2.10
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+passlib==1.7.2
+pycparser==2.20
 pydantic==1.5.1
+PyJWT==1.7.1
 pylint==2.5.3
 python-multipart==0.0.5
 six==1.15.0
